Update main padding to fix footer overlap

--- a/src/main.scss
+++ b/src/main.scss
@@ -46,7 +46,8 @@ container {
 main {
     margin: 0 auto;
     max-width: 112.0rem;
-    padding: 2.0rem 0;
+	padding: 0rem 0rem;
+	padding-top: 2.0rem;
     position: relative;
     width: 100%;
 
